syntax = "proto3";

option csharp_namespace = "GrpcLeaseService";

package lease;

service LeaseService {
  rpc RequestLease (Lease) returns (Empty);
  rpc SendLeasesOrder (LeasesResponse) returns (Empty);
}

message Empty {}

/*
message LeasesResponse {
     int32 epochId = 1;
     repeated Lease leases = 2;
}
*/

message LeasesResponse {
  int32 epochId = 1;
  repeated LeaseOrder leaseOrder = 2;
}

message Lease {
  string transactionManagerId = 1;
  repeated string requestIds = 2;
}

// message RequestLeaseReply {
//   repeated Lease leases = 1;
// }

message LeaseOrder {
  Lease lease = 1;
  int32 order = 2;
}